[gd_scene load_steps=8 format=2]

[ext_resource path="res://Pause/ChangeMenu.gd" type="Script" id=1]
[ext_resource path="res://Assets/Panels/Menu_Info_Panel.tres" type="StyleBox" id=2]
[ext_resource path="res://Assets/Fonts/Font24.tres" type="DynamicFont" id=3]
[ext_resource path="res://Assets/Panels/Hover_Menu_Info_Panel.tres" type="StyleBox" id=4]
[ext_resource path="res://Assets/Panels/Disabled_Menu_Info_Panel.tres" type="StyleBox" id=5]
[ext_resource path="res://Overworld/Hub/Comparison.tscn" type="PackedScene" id=6]
[ext_resource path="res://Pause/ItemSlot0.gd" type="Script" id=7]

[node name="Equips" type="Control"]
rect_scale = Vector2( 1.865, 1.4 )
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_right = 1030.0
margin_bottom = 770.0
custom_styles/panel = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
anchor_right = 0.4
margin_left = -1.0
margin_top = -4.0
margin_right = 759.0
margin_bottom = 767.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Options" type="VBoxContainer" parent="Panel/HBoxContainer"]
margin_right = 300.0
margin_bottom = 771.0
rect_min_size = Vector2( 300, 50 )

[node name="CurrentMenu" type="Button" parent="Panel/HBoxContainer/Options" groups=[
"text",
]]
margin_right = 300.0
margin_bottom = 70.0
rect_min_size = Vector2( 0, 70 )
focus_mode = 0
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
enabled_focus_mode = 0
text = "Party"

[node name="Player1" type="Button" parent="Panel/HBoxContainer/Options" groups=[
"text",
]]
margin_top = 74.0
margin_right = 300.0
margin_bottom = 144.0
rect_min_size = Vector2( 0, 70 )
custom_styles/hover = ExtResource( 4 )
custom_styles/focus = ExtResource( 4 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
text = "Player 1"

[node name="Player2" type="Button" parent="Panel/HBoxContainer/Options" groups=[
"text",
]]
margin_top = 148.0
margin_right = 300.0
margin_bottom = 218.0
rect_min_size = Vector2( 0, 70 )
custom_styles/hover = ExtResource( 4 )
custom_styles/focus = ExtResource( 4 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
text = "Player 1"

[node name="Player3" type="Button" parent="Panel/HBoxContainer/Options" groups=[
"text",
]]
margin_top = 222.0
margin_right = 300.0
margin_bottom = 292.0
rect_min_size = Vector2( 0, 70 )
custom_styles/hover = ExtResource( 4 )
custom_styles/focus = ExtResource( 4 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
text = "Player 1"

[node name="Player4" type="Button" parent="Panel/HBoxContainer/Options" groups=[
"text",
]]
margin_top = 296.0
margin_right = 300.0
margin_bottom = 366.0
rect_min_size = Vector2( 0, 70 )
custom_styles/hover = ExtResource( 4 )
custom_styles/focus = ExtResource( 4 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
text = "Player 1"

[node name="Back" type="Button" parent="Panel/HBoxContainer/Options" groups=[
"text",
]]
margin_top = 370.0
margin_right = 300.0
margin_bottom = 440.0
rect_min_size = Vector2( 0, 70 )
custom_styles/hover = ExtResource( 4 )
custom_styles/focus = ExtResource( 4 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
text = "Back"

[node name="Info" type="VBoxContainer" parent="Panel/HBoxContainer/Options"]
margin_top = 444.0
margin_right = 300.0
margin_bottom = 664.0
rect_min_size = Vector2( 0, 220 )

[node name="Description" type="Label" parent="Panel/HBoxContainer/Options/Info" groups=[
"text",
]]
margin_right = 300.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 80 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 1, 0.996078, 1 )
text = " 
"

[node name="Comparison" parent="Panel/HBoxContainer/Options/Info" instance=ExtResource( 6 )]
margin_top = 84.0
margin_right = 300.0
margin_bottom = 84.0

[node name="Reserve" type="VBoxContainer" parent="Panel/HBoxContainer"]
margin_left = 304.0
margin_right = 884.0
margin_bottom = 771.0
rect_min_size = Vector2( 580, 0 )

[node name="ReserveSlot1" type="Button" parent="Panel/HBoxContainer/Reserve" groups=[
"text",
]]
visible = false
margin_right = 720.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
custom_styles/hover = ExtResource( 4 )
custom_styles/focus = ExtResource( 4 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
text = "Ppau Kweh"
script = ExtResource( 7 )

[node name="ReserveSlot2" type="Button" parent="Panel/HBoxContainer/Reserve" groups=[
"text",
]]
visible = false
margin_right = 720.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
custom_styles/hover = ExtResource( 4 )
custom_styles/focus = ExtResource( 4 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
text = "Ppau Kweh"
script = ExtResource( 7 )

[node name="ReserveSlot3" type="Button" parent="Panel/HBoxContainer/Reserve" groups=[
"text",
]]
visible = false
margin_right = 720.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
custom_styles/hover = ExtResource( 4 )
custom_styles/focus = ExtResource( 4 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
text = "Ppau Kweh"
script = ExtResource( 7 )

[node name="ReserveSlot4" type="Button" parent="Panel/HBoxContainer/Reserve" groups=[
"text",
]]
visible = false
margin_right = 720.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
custom_styles/hover = ExtResource( 4 )
custom_styles/focus = ExtResource( 4 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
text = "Ppau Kweh"
script = ExtResource( 7 )

[node name="ReserveSlot5" type="Button" parent="Panel/HBoxContainer/Reserve" groups=[
"text",
]]
visible = false
margin_right = 720.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
custom_styles/hover = ExtResource( 4 )
custom_styles/focus = ExtResource( 4 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
text = "Ppau Kweh"
script = ExtResource( 7 )

[node name="ReserveSlot6" type="Button" parent="Panel/HBoxContainer/Reserve" groups=[
"text",
]]
visible = false
margin_right = 720.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
custom_styles/hover = ExtResource( 4 )
custom_styles/focus = ExtResource( 4 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
text = "Ppau Kweh"
script = ExtResource( 7 )

[node name="ReserveSlot7" type="Button" parent="Panel/HBoxContainer/Reserve" groups=[
"text",
]]
visible = false
margin_right = 720.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
custom_styles/hover = ExtResource( 4 )
custom_styles/focus = ExtResource( 4 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
text = "Ppau Kweh"
script = ExtResource( 7 )

[node name="ReserveSlot8" type="Button" parent="Panel/HBoxContainer/Reserve" groups=[
"text",
]]
visible = false
margin_right = 720.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
custom_styles/hover = ExtResource( 4 )
custom_styles/focus = ExtResource( 4 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
text = "Ppau Kweh"
script = ExtResource( 7 )

[node name="ReserveSlot9" type="Button" parent="Panel/HBoxContainer/Reserve" groups=[
"text",
]]
visible = false
margin_right = 720.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
custom_styles/hover = ExtResource( 4 )
custom_styles/focus = ExtResource( 4 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
text = "Ppau Kweh"
script = ExtResource( 7 )

[node name="ReserveSlot10" type="Button" parent="Panel/HBoxContainer/Reserve" groups=[
"text",
]]
visible = false
margin_right = 720.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
custom_styles/hover = ExtResource( 4 )
custom_styles/focus = ExtResource( 4 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
text = "Ppau Kweh"
script = ExtResource( 7 )
[connection signal="pressed" from="Panel/HBoxContainer/Options/Player1" to="." method="_on_Player1_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/Options/Player2" to="." method="_on_Player1_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/Options/Player3" to="." method="_on_Player1_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/Options/Player4" to="." method="_on_Player1_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/Options/Back" to="." method="_on_Back_pressed"]
[connection signal="focus_entered" from="Panel/HBoxContainer/Reserve/ReserveSlot1" to="Panel/HBoxContainer/Reserve/ReserveSlot1" method="_on_ItemSlot0_focus_entered"]
[connection signal="pressed" from="Panel/HBoxContainer/Reserve/ReserveSlot1" to="Panel/HBoxContainer/Reserve/ReserveSlot1" method="_on_ItemSlot0_pressed"]
[connection signal="focus_entered" from="Panel/HBoxContainer/Reserve/ReserveSlot2" to="Panel/HBoxContainer/Reserve/ReserveSlot2" method="_on_ItemSlot0_focus_entered"]
[connection signal="pressed" from="Panel/HBoxContainer/Reserve/ReserveSlot2" to="Panel/HBoxContainer/Reserve/ReserveSlot2" method="_on_ItemSlot0_pressed"]
[connection signal="focus_entered" from="Panel/HBoxContainer/Reserve/ReserveSlot3" to="Panel/HBoxContainer/Reserve/ReserveSlot3" method="_on_ItemSlot0_focus_entered"]
[connection signal="pressed" from="Panel/HBoxContainer/Reserve/ReserveSlot3" to="Panel/HBoxContainer/Reserve/ReserveSlot3" method="_on_ItemSlot0_pressed"]
[connection signal="focus_entered" from="Panel/HBoxContainer/Reserve/ReserveSlot4" to="Panel/HBoxContainer/Reserve/ReserveSlot4" method="_on_ItemSlot0_focus_entered"]
[connection signal="pressed" from="Panel/HBoxContainer/Reserve/ReserveSlot4" to="Panel/HBoxContainer/Reserve/ReserveSlot4" method="_on_ItemSlot0_pressed"]
[connection signal="focus_entered" from="Panel/HBoxContainer/Reserve/ReserveSlot5" to="Panel/HBoxContainer/Reserve/ReserveSlot5" method="_on_ItemSlot0_focus_entered"]
[connection signal="pressed" from="Panel/HBoxContainer/Reserve/ReserveSlot5" to="Panel/HBoxContainer/Reserve/ReserveSlot5" method="_on_ItemSlot0_pressed"]
[connection signal="focus_entered" from="Panel/HBoxContainer/Reserve/ReserveSlot6" to="Panel/HBoxContainer/Reserve/ReserveSlot6" method="_on_ItemSlot0_focus_entered"]
[connection signal="pressed" from="Panel/HBoxContainer/Reserve/ReserveSlot6" to="Panel/HBoxContainer/Reserve/ReserveSlot6" method="_on_ItemSlot0_pressed"]
[connection signal="focus_entered" from="Panel/HBoxContainer/Reserve/ReserveSlot7" to="Panel/HBoxContainer/Reserve/ReserveSlot7" method="_on_ItemSlot0_focus_entered"]
[connection signal="pressed" from="Panel/HBoxContainer/Reserve/ReserveSlot7" to="Panel/HBoxContainer/Reserve/ReserveSlot7" method="_on_ItemSlot0_pressed"]
[connection signal="focus_entered" from="Panel/HBoxContainer/Reserve/ReserveSlot8" to="Panel/HBoxContainer/Reserve/ReserveSlot8" method="_on_ItemSlot0_focus_entered"]
[connection signal="pressed" from="Panel/HBoxContainer/Reserve/ReserveSlot8" to="Panel/HBoxContainer/Reserve/ReserveSlot8" method="_on_ItemSlot0_pressed"]
[connection signal="focus_entered" from="Panel/HBoxContainer/Reserve/ReserveSlot9" to="Panel/HBoxContainer/Reserve/ReserveSlot9" method="_on_ItemSlot0_focus_entered"]
[connection signal="pressed" from="Panel/HBoxContainer/Reserve/ReserveSlot9" to="Panel/HBoxContainer/Reserve/ReserveSlot9" method="_on_ItemSlot0_pressed"]
[connection signal="focus_entered" from="Panel/HBoxContainer/Reserve/ReserveSlot10" to="Panel/HBoxContainer/Reserve/ReserveSlot10" method="_on_ItemSlot0_focus_entered"]
[connection signal="pressed" from="Panel/HBoxContainer/Reserve/ReserveSlot10" to="Panel/HBoxContainer/Reserve/ReserveSlot10" method="_on_ItemSlot0_pressed"]
